<resources>
    <string name="app_name" translatable="false">아 맞다!!</string>
    <string name="common_ok" translatable="false">확인</string>
    <string name="common_cancel" translatable="false">취소</string>
    <string name="common_alert_title" translatable="false">알림</string>

    <string name="btn_add_item" translatable="false">알림 추가</string>
    <string name="btn_sending_history" translatable="false">전송 이력 보기</string>
    <string name="btn_search_location" translatable="false">검색</string>
    <string name="btn_current_location" translatable="false">현재위치</string>

    <string name="alert_title_info_permission" translatable="false">권한요청 안내</string>
    <string name="alert_info_permission" translatable="false">아래 권한을 허용해주셔야 해당 어플리케이션을 사용할 수 있습니다.\n\n
        1.GPS 권한\n
        : 특정 위치를 벗어났는 지 감지를 위함.\n\n
        2. SMS 송수신 권한\n
        : 특정위치에 들어가거나, 벗어났을 경우 SMS로 고지 및 전송 성공,실패 여부를 확인하기 위함.\n\n
        3. 연락처 읽기 권한\n
        : SMS전송 정보 등록 시 수신자 선택을 위함.\n\n</string>

    <string name="alert_info_permission_go_to_setting" translatable="false">아래 권한을 허용해주셔야 해당 어플리케이션을 사용할 수 있습니다.\n
        [확인] 을 누르면 어플리케이션의 설정으로 이동합니다.\n아래 권한을 허용해주세요.\n\n
        1.GPS 권한\n
        : 특정 위치를 벗어났는 지 감지를 위함.\n\n
        2. SMS 송수신 권한\n
        :  특정위치에 들어가거나, 벗어났을 경우 SMS로 고지 및 전송 성공,실패 여부를 확인하기 위함.\n\n
        3. 연락처 읽기 권한\n
        : SMS전송 정보 등록 시 수신자 선택을 위함.\n\n</string>
    <string name="title_activity_maps" translatable="false">Map</string>

    <string name="next_step" translatable="false">다음</string>
    <string name="back_step" translatable="false">이전</string>
    <string name="common_add" translatable="false">추가</string>
    <string name="common_complete" translatable="false">완료</string>
    <string name="common_save" translatable="false">저장</string>
    <string name="txt_place_name" translatable="false">메모장</string>
    <string name="txt_hint_place_name" translatable="false">필요한 것을 적으세요. ex)다이소,은행</string>
    <string name="txt_hint_place_name_search" translatable="false">검색할 위치를 입력하세요.</string>
    <string name="commont_current_position" translatable="false">현재위치</string>

    <string name="alert_error_empty_placename" translatable="false">메모장을 필수로 입력하셔야됩니다.</string>
    <string name="alert_error_selected_placename" translatable="false">선택한 위치가 없습니다. 구글맵이 정상적으로 나오는 지 확인하시고, 위치를 선택하세요.</string>
    <string name="alert_error_no_place_result" translatable="false">검색된 위치가 없습니다.\n예)한남대학교,한남로 삼거리</string>

    <string name="head_info_text_step1" translatable="false">1. 위치 지정</string>
    <string name="head_info_text_step1_1" translatable="false">2023 캡스톤디자인 프로젝트</string>
    <string name="head_info_text_step1_2" translatable="false">박상현,채수혁,하영룡,강윤구</string>

    <string name="head_info_text_step2" translatable="false">2. 위치확인 유형 및 일정 설정</string>
    <string name="head_info_text_step2_1" translatable="false">2023 캡스톤디자인 프로젝트</string>
    <string name="head_info_text_step2_2" translatable="false">박상현,채수혁,하영룡,강윤구</string>

    <string name="head_info_text_step3" translatable="false">3. 알림방법 설정</string>
    <string name="head_info_text_step3_1" translatable="false">2023 캡스톤디자인 프로젝트</string>
    <string name="head_info_text_step3_2" translatable="false">박상현,채수혁,하영룡,강윤구</string>
    <string name="txt_alert_type" translatable="false">알림 유형 선택</string>
    <string name="radio_btn_alert_type_1" translatable="false">반경 내 진입 시 알림</string>
    <string name="radio_btn_alert_type_2" translatable="false">반경 내 벗어날 시 알림</string>
    <string name="txt_alert_execute_type" translatable="false">시간 및 요일 선택</string>
    <string name="txt_alert_execute_type_now" translatable="false">일시적 알림</string>
    <string name="txt_alert_execute_type_sched" translatable="false">주기별 알림</string>

    <string name="txt_info_alert_type_1" translatable="false">앞에서 선택한 위치에 진입된 경우 메시지를 전송합니다.</string>
    <string name="txt_info_alert_type_2" translatable="false">앞에서 선택한 위치에 벗어나 있는 경우 메시지를 전송합니다.</string>
    <string name="noti_launch_activity" translatable="false">앱 실행하기</string>
    <string name="noti_title" translatable="false">아 맞다!!</string>
    <string name="noti_remove_location_updates" translatable="false">위치 확인 중지</string>

    <string name="placeTask_tupe_in" translatable="false">IN</string>
    <string name="placeTask_tupe_out" translatable="false">OUT</string>
    
    <string name="main_list_long_click_menu_item_1" translatable="false">수정</string>
    <string name="main_list_long_click_menu_item_2" translatable="false">삭제</string>

    <string name="txt_send_success" translatable="false">전송 성공</string>
    <string name="txt_send_fail" translatable="false">전송 실패</string>
    <string name="txt_alert_me" translatable="false">진동으로 알림</string>

    <string name="txt_sms_validation_check1" translatable="false">필수사항을 입력하지 않았습니다.\'진동으로 알림\'를 체크하시거나 SMS로 알릴 번호를 하나이상 입력하셔야 합니다.</string>
    <string name="txt_sms_validation_check2" translatable="false">문자로 전달할 내용을 입력하지 않았습니다.</string>
    <string name="txt_sms_validation_check3" translatable="false">전화번호에 숫자, - 이외의 문자가 포함되어 있습니다.\n010XXXXYYYY 또는 010-XXXX-YYYY 형식으로 입력 부탁드립니다.</string>

    <string name="txt_load_fail_contact" translatable="false">연락처를 가지고 오지 못했습니다.</string>

    <string name="txt_main_info1" translatable="false">2023 캡스톤디자인 프로젝트</string>
    <string name="txt_main_info2" translatable="false">박상현,채수혁,하영룡,강윤구</string>

    <string name="txt_not_info_view" translatable="false">해당 페이지는 도움말이 제공되지 않습니다.</string>
    <string name="txt_sms_title" translatable="false">별도 메세지 전송</string>
    <string name="txt_sms_title_info" translatable="false">휴대폰 번호는 , 로 구분하여 여러개 입력가능합니다.</string>
    <string name="txt_input_moblie_num_hint" translatable="false">휴대폰 번호를 입력하세요.</string>
    <string name="txt_input_moblie_contents_hint" translatable="false">메모할 내용을 입력하세요</string>
    <string name="txt_alert_off" translatable="false">알림 확인</string>
    <string name="txt_notify_background" translatable="false">위치 알리미 위치(GPS)확인이 시작되었습니다.</string>
    <string name="txt_notify_err" translatable="false">위치 알리미 위치(GPS)확인 서비스에 해당 위치를\n추가하지 못했습니다.\n메인화면에서 스위치를 껐다 켜주세요.</string>
</resources>
