<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chk_alert_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txt_alert_me"
                android:textColor="@color/colorFontDark"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/txt_sms_title"
                android:textColor="@color/colorFontDark"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/txt_sms_title_info"
                android:textColor="@color/colorFontDark"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_sms_receiver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/txt_input_moblie_num_hint"
                    android:inputType="phone"
                    android:minHeight="16dp"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="16dp" />

                <ImageButton
                    android:id="@+id/btn_search_contact"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:src="@drawable/ic_search"
                    android:background="@drawable/btn_base_drawble"/>
            </LinearLayout>

            <EditText
                android:id="@+id/edit_sms_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/txt_input_moblie_contents_hint"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColorHint="@color/colorTextHint"
                android:textSize="16dp" />

        </LinearLayout>

</ScrollView>