<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_place_name"
            android:textSize="16dp"
            android:textColor="@color/colorFontDark"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/edit_place_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:hint="@string/txt_hint_place_name"
            android:textColorHint="@color/colorTextHint"
            android:textSize="16dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/place_search_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:background="@color/corlorBaseBackgroundTranslucent"
            android:layout_alignParentTop="true">
            <EditText
                android:id="@+id/edit_search_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:hint="@string/txt_hint_place_name_search"
                android:textColorHint="@color/colorTextHint"
                android:textSize="16dp"
                />

            <ImageButton
                android:id="@+id/btn_search_location"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/ic_search"
                android:background="@drawable/btn_base_drawble"
                android:layout_marginLeft="8dp"/>

            <ImageButton
                android:id="@+id/btn_current_location"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@drawable/btn_base_drawble"
                android:src="@drawable/ic_gps"
                android:layout_marginLeft="8dp"/>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>