<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/titlebar"></include>

        <LinearLayout
            android:id="@+id/info_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="8dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/ic_blit"/>
                <TextView
                    android:id="@+id/txt_info_line_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_main_info1"
                    style="@style/info_text_view_style"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="3dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/ic_blit"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_info_line_2"
                    android:text="@string/txt_main_info2"
                    style="@style/info_text_view_style" />
            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleView_placeTask_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@color/corlorBaseBackground">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        fab:fab_addButtonColorNormal="@color/colorSecondPrimary"
        fab:fab_addButtonColorPressed="@color/colorSecondPrimaryLight"
        fab:fab_addButtonPlusIconColor="@color/colorPrimaryComplementary"
        fab:fab_labelStyle="@style/menu_labels_style"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="38dp"
        android:layout_marginEnd="38dp">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_go_to_new_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorSecondPrimary"
            fab:fab_title="@string/btn_add_item"
            fab:fab_icon="@drawable/ic_action_new"
            fab:fab_colorPressed="@color/colorSecondPrimaryLight"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_go_to_senthistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorSecondPrimary"
            fab:fab_title="@string/btn_sending_history"
            fab:fab_icon="@drawable/ic_action_history"
            fab:fab_colorPressed="@color/colorSecondPrimaryLight"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</RelativeLayout >