<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18dp"
        android:textColor="@color/colorFontDark"
        android:textStyle="bold"
        android:text="@string/txt_alert_type" />

    <RadioGroup
        android:id="@+id/radio_gr_alert_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="3dp">

        <RadioButton
            android:id="@+id/radio_btn_alert_type_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_alert_type_1" />

        <RadioButton
            android:id="@+id/radio_btn_alert_type_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_alert_type_2" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:layout_marginTop="16dp"
        android:textSize="18dp"
        android:textColor="@color/colorFontDark"
        android:textStyle="bold"
        android:text="@string/txt_alert_execute_type" />

    <RadioGroup
        android:id="@+id/radio_gr_alert_execute_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="3dp">
        <RadioButton
            android:id="@+id/radio_btn_execute_alert_type_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_alert_execute_type_now" />

        <RadioButton
            android:id="@+id/radio_btn_execute_alert_type_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_alert_execute_type_sched"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="시작: " />
        <Button
            android:id="@+id/btn_start_time"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/btn_base_drawble"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="18dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:layout_marginTop="3dp"
        android:paddingRight="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="종료: "/>
        <Button
            android:id="@+id/btn_finish_time"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/btn_base_drawble"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="18dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="월"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="화"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="수"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="목"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="금"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:textColor="@android:color/holo_blue_light"
            android:text="토"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:textColor="@android:color/holo_red_light"
            android:text="일"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
            <CheckBox
                android:id="@+id/chk_days_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
            <CheckBox
                android:id="@+id/chk_days_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
            <CheckBox
                android:id="@+id/chk_days_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
            <CheckBox
                android:id="@+id/chk_days_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
            <CheckBox
                android:id="@+id/chk_days_05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
            <CheckBox
                android:id="@+id/chk_days_06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
            <CheckBox
                android:id="@+id/chk_days_07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>
</ScrollView>